@@ -1,12 +1,39 @@
-# Stage 1: Compile and build .jar
-FROM adoptopenjdk:17-jdk-hotspot as builder
-WORKDIR /app
-COPY . .
-RUN ./gradlew clean build
+FROM eclipse-temurin:17 as app-build
+ENV RELEASE=17
 
-# Stage 2: Run
-FROM adoptopenjdk:17-jre-hotspot
-WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar ./app.jar
-EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+RUN groupadd --gid 1000 spring-app \
+  && useradd --uid 1000 --gid spring-app --shell /bin/bash --create-home spring-app
+
+USER spring-app:spring-app
+WORKDIR /opt/build
+
+COPY ./build/libs/*-SNAPSHOT.jar ./application.jar
+
+RUN java -Djarmode=layertools -jar application.jar extract
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules `jdeps --ignore-missing-deps -q -recursive --multi-release ${RELEASE} --print-module-deps -cp "dependencies/BOOT-INF/lib/*":"snapshot-dependencies/BOOT-INF/lib/*" application.jar` \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output jdk
+
+FROM debian:buster-slim
+
+ARG BUILD_PATH=/opt/build
+ENV JAVA_HOME=/opt/jdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+
+RUN groupadd --gid 1000 spring-app \
+  && useradd --uid 1000 --gid spring-app --shell /bin/bash --create-home spring-app
+
+USER spring-app:spring-app
+WORKDIR /opt/workspace
+
+COPY --from=app-build $BUILD_PATH/jdk $JAVA_HOME
+COPY --from=app-build $BUILD_PATH/spring-boot-loader/ ./
+COPY --from=app-build $BUILD_PATH/dependencies/ ./
+COPY --from=app-build $BUILD_PATH/snapshot-dependencies/ ./
+COPY --from=app-build $BUILD_PATH/application/ ./
+
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
